Bug 475673 - It's possible to resize Kickoff from the bottom with a floating panel
Summary: It's possible to resize Kickoff from the bottom with a floating panel
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
: 477668 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-10-15 21:47 UTC by guimarcalsilva
Modified: 2023-12-08 10:28 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Resizing from sides without enough useful space (2.56 MB, video/mp4)
2023-10-15 21:47 UTC, guimarcalsilva
Details
Bug is not present when borders aren't rounded (306.97 KB, image/png)
2023-10-15 22:20 UTC, guimarcalsilva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description guimarcalsilva 2023-10-15 21:47:15 UTC
Created attachment 162331 [details]
Resizing from sides without enough useful space

SUMMARY
Now it's possible to resize Kickoff from the bottom when using the default floating panel. It's also possible to resize it from the left (near the screen edge) but that's a pre-existing issue. Allowing to resize from those positions is pointless because there's not enough space.

I'm filling this for Kickoff but it's likely the same issue would be present for other applets if they also floated (currently, they overlap the panel due to BUG 475147 ).

Check the attached video.

STEPS TO REPRODUCE
1. Open Kickoff with a floating panel
2. Try to resize from the bottom (or the left side)

OBSERVED RESULT
It's possible to pointlessly try to resize it from those positions.

EXPECTED RESULT
Only allow resizing when there's enough space to resize

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.6.0

ADDITIONAL INFORMATION
Tested on X11
Comment 1 guimarcalsilva 2023-10-15 22:20:59 UTC
Created attachment 162333 [details]
Bug is not present when borders aren't rounded

Hm... Weird. I restarted the VM and I can't reproduce it anymore no matter how many times I restart it or what kind of session I use. Interestingly, the rounded bottom corners on Kickoff that appear on the video also disappeared, and the left edge is also touching the screen border now, while it wasn't before. I guess it's supposed to float, so maybe this bug is still valid when Kickoff does what it is supposed to do.
Comment 2 Nate Graham 2023-10-20 15:52:39 UTC
This is sort of maybe intentional? But maybe not ideal.

Niccolò, can you look into this this?
Comment 3 mrfrh 2023-11-09 09:22:21 UTC
Can still reproduce this with neon-unstable-20231107-1001.iso, this bug is also valid for other panel popus in floating mode (e.g. network settings).
Comment 4 Bug Janitor Service 2023-11-26 11:37:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/989
Comment 5 Bug Janitor Service 2023-11-28 15:46:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/996
Comment 6 Nate Graham 2023-11-28 20:48:29 UTC
*** Bug 477668 has been marked as a duplicate of this bug. ***
Comment 7 David Edmundson 2023-12-08 10:28:30 UTC
Git commit 8601cab38d6d2a508d45a2f5fcfacda57ff96c40 by David Edmundson.
Committed on 08/12/2023 at 11:26.
Pushed by davidedmundson into branch 'master'.

appletpopup: Do not allow resizing towards the visualParent

Avoid allowing resizing on the edge an applet popped up.
To handle applets being flipped, a new property effectivePopupDirection
is added to the PopupAppletWindow that users can listen to.

M  +1    -0    src/plasmaquick/CMakeLists.txt
M  +10   -4    src/plasmaquick/appletpopup.cpp
M  +54   -35   src/plasmaquick/popupplasmawindow.cpp
M  +10   -0    src/plasmaquick/popupplasmawindow.h
A  +21   -0    src/plasmaquick/private/utils.cpp     [License: LGPL(v2.0+)]
A  +13   -0    src/plasmaquick/private/utils.h     [License: LGPL(v2.0+)]

https://invent.kde.org/plasma/libplasma/-/commit/8601cab38d6d2a508d45a2f5fcfacda57ff96c40