Do not allow resizing towards the visualParent

BUG:475673